<resources>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string name="setting_traditional_chinese">繁體中文</string>
    <string name="forward">发给朋友</string>
    <string name="save_img">保存到本地</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="saved_album">已保存在相册</string>
    <string name="loading">正在加载中</string>
    <string name="base_unknow_msg">[未知消息，请先升级客户端后查看]</string>
    <string name="base_open_url_failed">无法打开链接</string>
    <string name="base_card_action_failed">操作失败，请稍后再试</string>
    <string name="base_card_action_retry">操作繁忙，请稍后再试</string>
    <string name="base_card_action_timeout">操作已提交，机器人稍后响应</string>
    <string name="base_card_need_update">此消息需要更新客户端后查看</string>
    <string name="refresh_footer">- 到底了 -</string>
    <string name="base_withdraw">撤回</string>
    <string name="base_forward">转发</string>
    <string name="base_delete">删除</string>
    <string name="sure">确定</string>
    <string name="multiple_choice">多选</string>
    <string name="msg_reply">回复</string>
    <string name="re_edit">重新编辑</string>
    <string name="user_revoke_msg">\"%s\"撤回了一条消息</string>
    <string name="manager_revoke_user_msg">你撤回了一条成员 \"%s\" 的消息</string>
    <string name="manager_revoke_user_msg1"> %s 撤回了一条成员的消息</string>
    <string name="my_revoke_msg">你撤回了一条消息</string>
    <string name="max_choose_msg_count">最多选择100条消息</string>
    <string name="str_success">成功</string>
    <string name="common_emoji">最近使用</string>
    <string name="all_emoji">所有表情</string>
    <string name="base_mention_all">所有人</string>
    <string name="base_mention_all_ais">所有AI</string>
    <string name="str_send">发送</string>
    <string name="str_send_message_hint">给朋友留言</string>
    <string name="str_base_reply">评论</string>
    <string name="str_search">搜索</string>
    <string name="b_complete">完成</string>
    <string name="str_save">保存</string>
    <string name="str_delete">删除</string>
    <string name="str_edit">编辑</string>
    <string name="str_resend_msg_tips">消息发送失败，确定重发消息？</string>
    <string name="str_forward">已转发</string>
    <string name="str_base_tips">提示</string>
    <string name="str_choose">选择</string>
    <string name="local_already_exists">本地已存在</string>
    <string name="str_just">刚刚</string>
    <string name="str_min">%s分钟</string>
    <string name="yesterday">昨天</string>
    <string name="crop">裁剪</string>
    <string name="nodata">暂无数据</string>
    <string name="you">你</string>
    <string name="download_err">下载失败</string>
    <string name="is_new_version">当前已是最新版本</string>
    <string name="version_desc">更新说明</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_now">立即升级</string>
    <string name="new_version">最新版本</string>
    <string name="kit_user_agreement">用户协议</string>
    <string name="kit_privacy_policy">隐私政策</string>
    <string name="check_new_version">检查新版本</string>
    <string name="export_diag_log">导出诊断日志</string>
    <string name="about">关于</string>
    <string name="time_am">上午</string>
    <string name="time_pm">下午</string>
    <string name="str_msg_content_sticker">[贴纸]</string>
    <string name="copy">复制</string>
    <string name="copyed">已复制</string>
    <string name="blacklist_group">群内黑名单，消息发送失败，确定重发吗？</string>
    <string name="blacklist_user">黑名单用户，消息发送失败，确定重发吗？</string>
    <string name="no_relation_user">对方非好友关系，消息发送失败，确定重发吗？</string>
    <string name="no_relation_group">未在群内，消息发送失败，确定重发吗？</string>
    <string name="no_group_blacklist_noselect">该好友在群内黑名单内，不可勾选</string>
    <string name="str_all">所有</string>
    <string name="messages_encryption">用户之间的消息将受到端对端加密保护</string>
    <string name="init_data">正在初始化数据</string>
    <string name="str_signal_decrypt_err">[消息解密失败，无法查看]</string>
    <string name="str_content_format_err">[消息格式错误，无法查看]</string>
    <string name="str_forget_pwd">忘记密码</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saterday">周六</string>
    <string name="sunday">周日</string>
    <string name="max_file_size"> 最大支持500M</string>
    <string name="min_file_size">不支持的文件</string>
    <string name="authorization_request">权限申请</string>
    <string name="to_set">去设置</string>
    <string name="contact_permissions_des">在设置-应用-%s-权限中开读取手机联系人权限。以正常使用联系人查找功能</string>
    <string name="microphone_permissions_des">在设置-应用-%s-权限中开启麦克风权限。以正常使用语音、音视频通话、小视频等功能</string>
    <string name="file_permissions_des">在设置-应用-%s-权限中开启存储空间权限。以正常使用文件发送等功能</string>
    <string name="camera_permissions_desc">在设置-应用-%s-权限中开启相机权限。以正常使用拍摄、小视频、扫一扫等功能</string>
    <string name="location_permissions_desc">在设置-应用-%s-权限中开启位置信息权限。以正常使用位置共享、搜索等功能</string>
    <string name="album_permissions_desc">在设置-应用-%s-权限中开启存储空间权限。以正常使用在聊天、朋友圈、设置头像、设置聊天背景图片等功能中的图片查看和选择能力。</string>
    <string name="notification_permissions_desc">在设置-应用-%s-权限中开启通知权限。以收到新消息时能及时提醒你。</string>
    <string name="call_phone_permissions_desc">在设置-应用-%s-权限中开启拨打电话延续。以正常使用拨号功能</string>
    <string name="scan_qr_code">识别图中二维码</string>
    <string name="favorite">收藏</string>
    <string name="show_in_chat">定位到聊天</string>
    <string name="edited">已编辑</string>
    <string name="phone_tips">可能是%s号或电话号码，你可以</string>
    <string name="email_tips">可能是%s号或邮箱账号，你可以</string>
    <string name="send_email">写邮件</string>
    <string name="call">呼叫</string>
    <string name="add_to_phone_book">添加到手机通讯录</string>
    <string name="msg_read_count">%d已读</string>
    <string name="forbidden_can_not_resend">禁言中无法重发消息</string>
    <string name="copy_url">复制链接</string>
    <string name="open_system_browser">系统浏览器打开</string>
    <string name="refresh">刷新</string>
    <string name="unknow_msg_type">[未知消息]</string>
    <string name="str_create">创建</string>
    <string name="restart_app_desc">需重启应用后配置才可生效，是否立即重启应用？</string>
    <string name="str_request">申请</string>
    <string name="str_request_desc">%s的昵称头像</string>
    <string name="str_get_name_avatar">获取你的昵称、头像</string>
    <string name="msg_send_fail">消息发送失败</string>
    <string name="msg_send_fail_resend">重新发送</string>
    <string name="str_you">你</string>
    <string name="str_delete_message">删除消息</string>
    <string name="str_delete_message_tip">您确定要删除这条消息吗？</string>
    <string name="str_delete_message_also_to">同时为 %s 删除</string>
    <string name="str_delete_message_for_all">为所有成员删除</string>
    <string name="content_too_long">内容太长</string>
    <string name="video_deleted">视频不存在或已被删除</string>
    <string name="can_not_play_video_with_revoke">视频已被撤回，无法播放</string>
    <string name="wk_video">视频</string>
    <string name="last_message_file">[文件]</string>
    <string name="str_file">文件</string>
    <string name="str_file_download">下载</string>
    <string name="str_file_open">打开</string>
    <string name="str_file_preview">预览</string>
    <string name="str_file_download_fail">文件下载失败</string>
    <string name="str_file_not_exist">文件不存在</string>
    <string name="str_file_too_large">文件大小超过100MB，无法发送</string>
    <string name="str_file_type_dangerous">不支持发送该类型的文件</string>
    <string name="str_file_save_to">保存到…</string>
    <string name="str_file_share">分享</string>
    <string name="str_file_saved">文件已保存</string>
    <string name="str_file_save_fail">保存失败</string>
    <string name="str_file_open_with">打开方式</string>
    <string name="str_file_no_app">没有可以打开此文件的应用，可尝试保存后用其他方式打开</string>
    <string name="destroy_account">注销账号</string>
    <string name="destroy_apply_title">申请注销账号</string>
    <string name="destroy_apply_subtitle">请仔细阅读以下注意事项</string>
    <string name="destroy_warn_1">• 账号注销后，将无法登录此账号</string>
    <string name="destroy_warn_2">• 账号中的所有数据将被清除且无法恢复</string>
    <string name="destroy_warn_3">• 注销申请提交后有 7 天冷静期，期间可随时取消</string>
    <string name="destroy_warn_4">• 冷静期结束后账号将被永久注销</string>
    <string name="destroy_password_hint">请输入登录密码以验证身份</string>
    <string name="destroy_apply_btn">申请注销</string>
    <string name="destroy_confirm_msg">确定要申请注销账号吗？提交后将进入 7 天冷静期，届满后账号将被永久注销。</string>
    <string name="destroy_confirm_btn">确认注销</string>
    <string name="destroy_applied_toast">注销申请已提交</string>
    <string name="destroy_applying_title">账号注销中</string>
    <string name="destroy_remaining_days">距离账号永久注销还剩 %d 天</string>
    <string name="destroy_expire_date">预计注销日期：%s</string>
    <string name="destroy_cooling_tip">冷静期内登录或点击下方按钮可取消注销</string>
    <string name="destroy_cancel_btn">取消注销</string>
    <string name="destroy_cancel_confirm_msg">确定要取消注销吗？取消后账号将恢复正常使用。</string>
    <string name="destroy_cancel_confirm_btn">确认取消注销</string>
    <string name="destroy_cancelled_toast">已取消注销</string>
    <string name="destroy_cooling_bottom_tip">冷静期结束后，账号将被永久注销且无法恢复</string>
    <string name="str_net_error">网络异常，请稍后重试</string>
    <string name="str_text_exceed_limit_tip">字数超出限制无法发送，是否需将消息转为文档发出？</string>
    <string name="str_confirm_send">确认发送</string>
    <string name="str_default_text_file_name">消息</string>
    <string name="screenshot_tip">%s在聊天中截屏了</string>
    <string name="str_someone">对方</string>
    <string name="summary_notify_tip">%1$s总结了群聊内容</string>
    <string name="summary_notify_you">你</string>
    <string name="summary_notify_unknown">某用户</string>
    <string name="api_url_dialog_title">服务器配置</string>
    <string name="api_url_dialog_hint">修改后将重启应用并重新登录，请确认地址正确</string>
    <string name="api_url_dialog_preset_label">快速选择</string>
    <string name="api_url_dialog_custom_label">手动输入</string>
    <string name="api_url_dialog_input_hint">请输入服务器地址</string>
    <string name="api_url_dialog_confirm">确认并重启</string>
    <string name="api_url_dialog_current">当前地址：%s</string>
    <string name="api_url_dialog_empty">请输入地址</string>
    <string name="api_url_dialog_checking">验证中…</string>
    <string name="api_url_dialog_unreachable">服务器地址不可达，请检查地址是否正确</string>
    <string name="str_table">表格</string>
    <string name="str_table_copied">表格内容已复制</string>
    <string name="join_success_same_space">已加入「%1$s」</string>
    <string name="group_join_cross_space_notice">已加入【%1$s】的群组「%2$s」</string>
    <string name="group_join_cross_space_action">切换到%1$s查看</string>
    <string name="realname_verified_badge_cd">已实名</string>
    <string name="error_auth_failed">认证失败</string>
    <string name="error_not_found">请求地址不存在</string>
    <string name="error_request_failed">请求失败(%d)</string>
    <string name="error_network_failed">网络连接失败</string>
    <string name="error_network_exception">网络请求异常</string>
    <string name="pdf_loading">加载中...</string>
    <string name="pdf_load_failed">加载失败: %s</string>
    <string name="download_new_version">%s 新版本下载</string>
    <string name="download_in_progress">下载中...</string>
    <string name="install_failed">安装失败</string>
    <string name="diagnostic_no_logs">暂无诊断日志</string>
    <string name="diagnostic_share_failed">分享失败</string>
    <string name="diagnostic_share_title">发送诊断日志</string>
    <string name="auth_dialog_message">当前网页需要授权</string>
    <string name="time_years_ago">%d 年前</string>
    <string name="time_months_ago">%d 月前</string>
    <string name="time_days_ago">%d 天前</string>
    <string name="time_hours_ago">%d 小时前</string>
    <string name="time_minutes_ago">%d 分钟前</string>
    <string name="time_just_now">刚刚</string>
    <string name="time_format_month_day">M月d日</string>
    <string name="time_format_year_month_day">yyyy年M月d日</string>
    <string name="time_format_year_month_day_full">yyyy年MM月dd日</string>
    <string name="animated_avatar_title">动图头像</string>
    <string name="animated_avatar_size_format">动图头像 · 约 %.1f MB</string>
    <string name="animated_avatar_too_large">动图头像不能超过 5MB</string>
    <string name="btn_reselect">重新选择</string>
    <string name="richtext_caption_title">添加描述</string>
    <string name="richtext_caption_hint">说点什么…</string>
</resources>